--- a/css/app.css
+++ b/css/app.css
@@ -50,7 +50,12 @@ h6 {
 
 #slide2 {
      background: #FFFFFF;
-     height: 100%;
+     height: 90%;
+}
+
+#slide2m {
+     background: #FFFFFF;
+     height: 700px;
 }
 
 .slidecontainer{
