--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,10 @@ body {
   line-height: 1.5;
   color: #ffffff;
   background: #212121;
+  background: -webkit-linear-gradient(to top, #512DA8 0%, #212121 30%); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(to top, #512DA8 0%, #212121 30%); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(to top, #512DA8 0%, #212121 30%); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom, #512DA8 0%, #212121 30%); /* Standard syntax */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
